ci/build-and-push/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ci-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.kaiandkai.com
      http:
        paths:
          - path: /github-webhook
            pathType: Prefix
            backend:
              service:
                name: el-build-and-push-listener
                port:
                  number: 8080
